@startuml

title __CSV's Class Diagram__\n

  package com.formation.start {
    package com.formation.start.csv {
      class Author {
          - name : String
          + Author()
          + toString()
      }
    }
  }
  

  package com.formation.start {
    package com.formation.start.csv {
      class Book {
          - nbpage : int
          + Book()
          + Book()
          + getNetPrice()
          + getNbpage()
          + toString()
          + setNbpage()
      }
    }
  }
  

  package com.formation.start {
    package com.formation.start.csv {
      class BookRepository {
          ~ bookList : ArrayList<Book>
          + fill()
          + getAll()
          + getById()
          + getByTitle()
          + getByPrice()
          + getByPublisher()
          + add()
          + remove()
          + update()
          + print()
          + toString()
      }
    }
  }
  

  package com.formation.start {
    package com.formation.start.csv {
      class ImportTable {
          - nLines : int
          - nColumns : int
          - matrix : List<ArrayList<String>>
          + getMatrix()
          + load()
          + print()
          + getnLines()
          + getnColumns()
      }
    }
  }
  

  package com.formation.start {
    package com.formation.start.csv {
      class Main {
          {static} + path : String
          {static} + main()
      }
    }
  }
  

  package com.formation.start {
    package com.formation.start.csv {
      class Media {
          {static} - compteur : int
          - id : int
          - title : String
          - price : double
          - authorList : ArrayList<Author>
          + Media()
          + Media()
          + getPrice()
          + getNetPrice()
          + toString()
          + setId()
          + setTitle()
          + setPrice()
          + setPublisher()
          + setAuthorList()
          {static} + getCompteur()
          + getId()
          + getTitle()
          + getPublisher()
          + getAuthorList()
      }
    }
  }
  

  package com.formation.start {
    package com.formation.start.csv {
      class Mesures {
          + getColumn()
          + getDifference()
          + getIndexDifference()
      }
    }
  }
  

  package com.formation.start {
    package com.formation.start.csv {
      class Publisher {
          - name : String
          + Publisher()
          + getName()
          + toString()
      }
    }
  }
  

  Book -up-|> Media
  BookRepository -up-|> ImportTable
  Media o-- Publisher : integer
  Mesures -up-|> ImportTable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
